@@ -4,18 +4,5 @@ version := "ALWAYS-SNAPSHOT"
 
 scalacOptions in (Compile, doc) ++= Opts.doc.title("OPAL - Demos")
 
-// We want to use different VM settings for OPAL
+// We want to use a different VM 
 fork in run := true
-
-//javaOptions in run := Seq("-Xmx2G", "-Xms1024m", "-XX:+AggressiveOpts", "-Xnoclassgc", "-XX:InlineSmallCode=1500", "-XX:MaxInlineSize=52")
-//19.9secs... javaOptions in run := Seq("-Xmx2G", "-Xms1014m", "-XX:NewRatio=1", "-XX:SurvivorRatio=8", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-Xnoclassgc", "-XX:InlineSmallCode=2048", "-XX:MaxInlineSize=64")
-javaOptions in run := 
-	Seq("-Xmx2G",
-		"-Xms1024m",
-		"-XX:NewRatio=1",
-		"-XX:SurvivorRatio=8",
-		"-XX:+UseParallelGC",
-		"-XX:+AggressiveOpts",
-		"-Xnoclassgc",
-		"-Dorg.opalj.threads.CPUBoundTasks=8"/*<= should be equivalent to the number of physical cores!*/,
-		"-Dorg.opalj.threads.IOBoundTasks=24") 
